# aiu-cli

./: .gitignore  AGENTS.md  AI_University_CLI_Core_Engine_PRD.md  IMPLEMENTATION_TASKS.md  README.md  create_course_preview.sh  pyproject.toml
src/aiu/: __init__.py  __main__.py  approval.py  artifact_store.py  assessment_generation.py  auth.py  cli.py  config.py  context_research.py  course_materials.py  course_memory.py  course_rails.py  exports.py  extract.py  feedback.py  generation.py  ingest.py  lab_generation.py  lecture_generation.py  lecture_quality.py  logging.py  models.py  paths.py  planning.py  project.py  prompt.py  providers.py  regeneration.py  resume.py  state.py  updater.py  validation.py
tests/: test_approval.py  test_artifact_store.py  test_assessment_generation.py  test_auth.py  test_cli_smoke.py  test_context_inventory.py  test_context_research.py  test_course_memory.py  test_course_rails.py  test_end_to_end.py  test_export.py  test_extraction.py  test_init.py  test_lab_generation.py  test_lecture_duration_contract.py  test_lecture_generation.py  test_loading_logs.py  test_models.py  test_planning.py  test_prompt_intake.py  test_providers.py  test_regenerate.py  test_resume.py  test_security_hardening.py  test_syllabus_generation.py  test_updater.py  test_validation.py
tests/integration/: test_codex_provider.py  test_openai_provider.py
