[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiu"
version = "0.1.0"
description = "CLI and core engine for generating AI University course packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AI University" }
]
dependencies = [
  "click>=8.1,<9",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1"
]

[project.scripts]
aiu = "aiu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
